@@ -1,3 +1,8 @@
+* Mon Jan 29 2007 Jesse Keating <jkeating@redhat.com>
+- Update the comps file again from F7
+- Fix the ppc boot flags
+- Clean up SRPM-disc junk
+
 * Thu Jan 25 2007 Jesse Keating <jkeating@redhat.com>
 - Update the comps file from F7
 
